@@ -88,7 +88,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 ##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
 ##CONF.N_MOD_GROUP_BY = 5
-CONF.N_MOD_GROUP_BY = 40
+#CONF.N_MOD_GROUP_BY = 40
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
@@ -156,7 +156,7 @@ CONF.LOG_IMPORT_NTIMES_POP = 100000
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
