@@ -63,14 +63,16 @@ module Fairy
       end
     end
 
-    def terminate
+    def terminate(mon)
+      @wait_cv = mon.new_cv
+
       wait_export_finish
       super
     end
 
     def wait_export_finish
       self.status = ST_WAIT_EXPORT_FINISH
-      @export.wait_finish
+      @export.fib_wait_finish(@wait_cv)
       self.status = ST_EXPORT_FINISH
     end
   end
