@@ -1,39 +1,44 @@
-require "fiber"
 
 module Fairy
   class FiberMon
 
-    def initialize(monitor)
+    def initialize
+
+      @current = nil
 
       @entries = []
 
       @wait_resume = []
       @wait_resume_mx = Mutex.new
-      @wait_resume_cv = ConditionVariable.new
+      @wait_resume_cv = ::ConditionVariable.new
     end
+
+    attr_reader :current
 
     def start
       Thread.start do
 	loop do
-	  @wait_resume_mx.syncronize do
+	  @wait_resume_mx.synchronize do
 	    while @wait_resume.empty? && @entries.empty?
 	      @wait_resume_cv.wait(@wait_resume_mx)
 	    end
 	    
 	    if block =  @entries.shift
-	      fb = Fiber.new{block.call}
+	      @current = Fiber.new{block.call(self)}
 	    else
-	      fb = @wait_resume.shift
+	      @current = @wait_resume.shift
 	    end
 	  end
-	  fb.resume if fb
+	  @current.resume if @current
+	  @current = nil
 	end
       end
     end
 
-    def entry_fiber(&block)
-      @waite_resume_mx.synchronize do
-	@entries.push block
+    def entry_fiber(p0 = nil, &block)
+      p0 = block if block
+      @wait_resume_mx.synchronize do
+	@entries.push p0
 	@wait_resume_cv.signal
       end
     end
@@ -70,13 +75,13 @@ module Fairy
 	@waitings_mx.synchronize do
 	  return if @waitings.empty?
 	  fbs, @waitings = @waitings, []
-	  @mon.entry_wait_resume(fbs)
+	  @mon.entry_wait_resume(*fbs)
 	end
       end
 
       def wait
 	@waitings_mx.synchronize do
-	  @waitings.push Fiber.current
+	  @waitings.push @mon.current
 	end
 	Fiber.yield
       end
